--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col s12 center-align">
           <a class="waves-effect waves-light btn" onclick="changeText()"
-            >Feeling Lucky</a
+            >DEAKIN UNIVERSITY</a
           >
         </div>
       </div>
