--- a/public/index.html
+++ b/public/index.html
@@ -82,24 +82,24 @@
         <form class="col s12">
           <div class="row">
             <div class="input-field col s6">
-              <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-              <label for="first_name">First Name</label>
+              <input placeholder="Placeholder" id="name" type="text" class="validate">
+              <label for="title">Name</label>
             </div>
             <div class="input-field col s6">
-              <input id="last_name" type="text" class="validate">
-              <label for="last_name">Last Name</label>
+              <input id="image" type="text" class="validate">
+              <label for="image">Image</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <input id="password" type="password" class="validate">
-              <label for="password">Password</label>
+              <input id="link" type="text" class="validate">
+              <label for="link">link</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <input id="email" type="email" class="validate">
-              <label for="email">Email</label>
+              <input id="description" type="text" class="validate">
+              <label for="description">description</label>
             </div>
           </div>
           <div class="row">
