--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
         <form class="col s12">
           <div class="row">
             <div class="input-field col s6">
-              <input placeholder="Placeholder" id="name" type="text" class="validate">
+              <input placeholder="Placeholder" id="title" type="text" class="validate">
               <label for="title">Name</label>
             </div>
             <div class="input-field col s6">
